--- a/arch/arm/boot/dts/zynq-e310-ad9361-fmcomms2-3.dts
+++ b/arch/arm/boot/dts/zynq-e310-ad9361-fmcomms2-3.dts
@@ -1,7 +1,7 @@
 /dts-v1/;
 
-/include/ "zynq-zc702.dtsi"
-/include/ "zynq-zc702-adv7511.dtsi"
+/include/ "zynq-e310.dtsi"
+/include/ "zynq-e310-adv7511.dtsi"
 &spi0 {
 	status = "okay";
 };
@@ -75,7 +75,7 @@
 	};
 };
 
-#include "adi-fmcomms2.dtsi"
+#include "adi-fmcomms-e310.dtsi"
 #include "adi-fmcomms3-up-down-converter.dtsi"
 
 &adc0_ad9361 {
